k8s/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-app-service
spec:
  selector:
    app: ecommerce
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
